Encrypt on startup only when nothing is encrypted with the key yet; drop `enable-encryption`
Instead of a separate command, startup encrypts the database when the key is
set and there is no `encryption-check` sentinel, provided nothing in the
database already decrypts with that key (snapshotted before migrations,
which legitimately write such values). Ciphertext is authenticated, so such
a value can only have been written by the key holder: finding one without
the sentinel means the database was encrypted and then modified directly,
and startup refuses. Getting past this requires destroying every encrypted
value, which is no better for an attacker than destroying the database.

The check uses `decryptable-string?`/`decryptable-bytes?` (shape check plus
a real decrypt) rather than the shape-only `possibly-encrypted?`, which is
true for roughly one in sixteen plaintext byte values and for hex tokens.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>